TFP-6380 sjekk falskid mot fpsak og logg relevante (#1280)